# crypto-tracker

backend-p/: .coverage  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  t.py
backend-p/alembic/: env.py
backend-p/alembic/versions/: 2025_07_06_2329-797902e9c67f_init_database.py  2025_07_11_0129-6cf8e9d4780d_add_unique_constraint_portfolio_coin.py
backend-p/src/: config.py  database.py  logger_setup.py  main.py  middlewares.py  mixin.py  models.py
backend-p/src/api_coins/: config.py  redis_client.py  router.py  schemas.py  utils.py
backend-p/src/auth/: config.py  dependencies.py  models.py  oauth2.py  router.py  schemas.py  service.py  token.py  utils.py
backend-p/src/portfolio/: models.py  router.py  schemas.py  service.py
backend-p/tests/: conftest.py  test_api_coins.py  test_auth.py  test_portfolio.py
backend-rs/: Cargo.toml
backend-rs/src/: api.rs  client_api.rs  coins_api.rs  main.rs  middleware.rs  router.rs
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CryptocurrencyCard.tsx  CurrencySelect.tsx  Header.tsx  PortfolioCard.tsx
frontend/src/components/modals/: Login.tsx  Register.tsx
frontend/src/models/: auth.ts  cryptoData.ts  portfolio.ts
frontend/src/pages/: CreatePortfolio.tsx  EditPortfolio.tsx  MarketOverview.tsx  Portfolio.tsx  PortfolioDetail.tsx
frontend/src/stores/: api.ts  authStore.ts  cryptoStore.ts  currencyStore.ts  portfolioStore.ts
